--- a/folderbox.sty
+++ b/folderbox.sty
@@ -3,14 +3,15 @@
 
 % RequirePackage is like usepackage, but can be loaded before documentclass
 
+%, showboxes --> draws boxes around textblocks
 \RequirePackage[absolute]{textpos}
+% textblock margin
+\TPMargin{10pt}
+
 \usepackage{calc}
 
 % no paragraph indents
 \setlength{\parindent}{0pt}
-
-% textblock margin
-\TPMargin{10pt}
 
 
 % for \ifstrempty
@@ -25,18 +26,6 @@
 %
 \usepackage{tikz}
 \usepackage{mwe}
-\usepackage[
-  placement=top,
-  %position={0,0},
-  angle=0,
-  color=black,
-  scale=1,
-  hshift=-11.5mm,
-  vshift=0
-  ]{background}
-
-% empty as default
-\backgroundsetup{contents={}}
 
 \newcommand\mm{5}
 
@@ -54,67 +43,63 @@
     \draw (-12,0) -- (-\mm,0);
   }
 
-% get left margin from geometry package
-\makeatletter
-\newcommand{\Gmlefttmargin}{
-     \Gm@lmargin
-}
-\makeatother
+\newlength{\fb@labelwidth}
+\setlength{\fb@labelwidth}{5.57cm}
 
-% x offset for start of table
-%\newcommand\folderboxoffset{1.25cm}
-\newcommand\folderboxoffset{\Gmlefttmargin}
+\newlength{\fb@cropmarks@xoffset}
+\setlength{\fb@cropmarks@xoffset}{-3mm}
 
-
-% widh of table column including margins, parenthtesis for multiplicattion below
-\newcommand\folderboxlabelwidth{(5.15cm + 0.165cm)}
+% width of label including margins, parenthesis for multiplication below
+\newlength{\fb@cropmarks@labelwidth}
+\setlength{\fb@cropmarks@labelwidth}{5.57cm - 7.335pt}   % for for loop
 
 
-\newcommand{\cropmarksCmd}{
-    \begin{minipage}[t]{\textwidth}
-        % top
-        \foreach \x in {0,1,2,3,4,5}{
-            \begin{tikzpicture}[x=1mm, y=1mm, xshift=\folderboxoffset + \x * \folderboxlabelwidth, yshift=-16.7mm, overlay]
-                \myupmark
-            \end{tikzpicture}
-        }
-        %
-        % bottom
-        \foreach \x in {0,1,2,3,4,5}{
-            % y = -1 turns upmark upside down
-            % TODO: Why is is necessary to substract -3.66m from xshift?
-            % TODO: Why is \folderboxoffset not required for xshift, here?
-            \begin{tikzpicture}[x=1mm, y=-1mm, xshift= -3.66mm + \x * \folderboxlabelwidth, yshift=-195.75mm, overlay]
-                \myupmark
-            \end{tikzpicture}
-        }
-        %
-        % top left
-        \begin{tikzpicture}[x=1mm, y=1mm, xshift=-16mm, yshift=-13.9mm, overlay]
-            \myleftmark
+\newcommand{\doPrintCropmarks}{}
+
+\newcommand{\printCropmarks}{
+    % top
+    \foreach \x in {0,1,2,3,4,5}{
+        \begin{tikzpicture}[overlay, xshift=\fb@cropmarks@xoffset + \x \fb@cropmarks@labelwidth, yshift=-3mm, x=1mm, y=1mm]
+            \myupmark
         \end{tikzpicture}
-        %
-        % bottom left
-        \begin{tikzpicture}[x=1mm, y=1mm, xshift=-16mm, yshift=-200mm, overlay]
-            \myleftmark
+    }
+    %
+
+    % bottoom
+    \foreach \x in {0,1,2,3,4,5}{
+        \begin{tikzpicture}[overlay, xshift=\fb@cropmarks@xoffset + \x \fb@cropmarks@labelwidth, yshift=-179mm, x=1mm, y=-1mm]
+            \myupmark
         \end{tikzpicture}
-        %
-        % top right
-        \begin{tikzpicture}[x=-1mm, y=1mm, xshift=252mm, yshift=-13.9mm, overlay]
-            \myleftmark
-        \end{tikzpicture}
-        %
-        % bottom right
-        \begin{tikzpicture}[x=-1mm, y=1mm, xshift=252mm, yshift=-200mm, overlay]
-            \myleftmark
-        \end{tikzpicture}
-    \end{minipage}
+    }
+    %
+
+    % top left
+    \begin{tikzpicture}[remember picture,overlay, xshift=0mm, yshift=9mm, x=1mm, y=1mm]
+        \myleftmark
+    \end{tikzpicture}
+    %
+    %
+    % top right
+    \begin{tikzpicture}[remember picture,overlay, xshift=270mm, yshift=9mm, x=-1mm, y=1mm]
+        \myleftmark
+    \end{tikzpicture}
+
+    % bottom left
+    \begin{tikzpicture}[remember picture,overlay, x=1mm, y=1mm, xshift=0mm, yshift=-174mm]
+        \myleftmark
+    \end{tikzpicture}
+    %
+    % bottom right
+    \begin{tikzpicture}[remember picture,overlay, x=-1mm, y=1mm, xshift=270mm, yshift=-174mm]
+        \myleftmark
+    \end{tikzpicture}
 }
 
 \DeclareOption{cropmarks}{
-    \backgroundsetup{contents={\cropmarksCmd}}
+    \renewcommand{\doPrintCropmarks}{\printCropmarks}
 }
 \ProcessOptions\relax
+
 
 % ==============================================================================
 % ==============================================================================
@@ -124,8 +109,9 @@
 % Environment for labels of 5 folders
 %
 
-% will create a table with 5 columns, one per label / folder, and two rows
-% first row contains header for the folder, second row the contents of the folder
+% will create 5 text boxes, one per label / folder with two fields
+% (i)  first field: contains header for the folder,
+% (ii) second contains the contents of the folder
 % argument 1: name of archive box
 
 \newcounter{currentFolder}[section]
@@ -143,7 +129,7 @@
 
 %
 
-\newcommand{\folderboxDatePrefix}{Stand: }
+\newcommand{\folderboxDatePrefix}{Date: }
 
 \newenvironment{folderbox}[2][]
 {
@@ -222,16 +208,13 @@
 
     \section*{\foldername \hfill \folderboxDatePrefix \today}
 
-
-    \newlength{\folderboxwidth}
-    \setlength{\folderboxwidth}{5.57cm}
-
     \foreach \x in {1,2,3,4,5}{
-        \begin{textblock*}{\folderboxwidth}(\x \folderboxwidth - \folderboxwidth + 13mm,14mm)
+        \begin{textblock*}{\fb@labelwidth}(\x \fb@labelwidth - \fb@labelwidth + 10mm,14mm)
             \renewcommand{\baselinestretch}{1.5}    % increase line spacing
             {\folderboxHeaderFont \FolderVar{header\x}}
 
             {\folderboxBodyFont \FolderVar{content\x}}
         \end{textblock*}
     }
+    \doPrintCropmarks
 }
