Ensure \newpage before new folderbox environment

--- a/folderbox.sty
+++ b/folderbox.sty
@@ -188,6 +188,7 @@
     % take variables for headers and contents and output them
     %
 
+    \newpage
     \section*{\foldername \hfill \folderboxDatePrefix \today}
 
     \foreach \x in {1,2,3,4,5}{
