--- a/example/example.tex
+++ b/example/example.tex
@@ -5,6 +5,12 @@
 \usepackage[cropmarks]{folderbox}
 
 
+\usepackage{lipsum}
+\usepackage{rotating}
+
+\usepackage{tikz-feynman}
+\tikzfeynmanset{compat=1.1.0}
+
 
 %
 % Set fonts for labels
@@ -21,7 +27,7 @@
 \renewcommand{\folderboxHeaderFont}{\fontspec{Futura Bold} \LARGE \bfseries}
 \renewcommand{\folderboxHeaderFont}{\fontspec{Futura Medium} \huge \bfseries}
 \renewcommand{\folderboxHeaderFont}{\fontspec{Futura Bold} \Huge \bfseries}
-\renewcommand{\folderboxHeaderFont}{\fontspec{Futura Bold} \fontsize{36}{38} \bfseries}
+\renewcommand{\folderboxHeaderFont}{\fontspec{Futura Bold} \fontsize{36}{38}\selectfont \bfseries}
 \renewcommand{\folderboxBodyFont}{\fontspec{Futura Medium} \LARGE}
 
 % Helvetica Neue
@@ -34,39 +40,112 @@
 
 \begin{document}
 
+\begin{folderbox}{My Folder Box -- The Label}
+
+\folderCmd{\fontsize{32}{38}\selectfont Projects}{
+\vspace{1cm}
+\begin{center}
+
+tW
+\vspace{0.2cm}
+
+\begin{tikzpicture}
+          \begin{feynman}
+            \diagram [vertical=a to b, small] {
+            % draw t-channel qg->qtb
+            i1 [particle=\(q\)]
+            -- [fermion] a
+            -- [fermion] f1 [particle=\( q\)],
+
+            a
+            -- [boson, edge label=\(W\)] b,
 
 
-\begin{folderbox}{Folder Box 1}
+            i2 [particle=\(b\)]
+             -- [fermion] b
+             -- [fermion]  t [particle=\(t\)]],
 
-\folderCmd{Bank}{
+            % invisible helper lines for layout
+            i1 -- [draw=none] h1 -- [draw=none] i2,
+            f1 -- [draw=none] h2 -- [draw=none] t,
+            };
+          \end{feynman}
+        \end{tikzpicture}
+
+    %\includegraphics[scale=0.5]{../doc/folderbox_with_labels.pdf}
+
+    % $\bullet$
+
+    % $\bullet$
+
+    % $\bullet$
 
 
+    \vspace{2cm}
+    folderbox
+    \vspace{0.5cm}
+
+    \includegraphics[scale=0.5]{../doc/folderbox_with_labels.pdf}
+\end{center}
 }
 
-\folderCmd{Invoice}{
+\folderCmd{}{
+{\fontsize{12}{10}\selectfont
+%\lipsum[66]
+To be, or not to be: that is the question:
+Whether 'tis nobler in the mind to suffer
+The slings and arrows of outrageous fortune,
+Or to take arms against a sea of troubles,
+And by opposing end them? To die: to sleep;
+No more; and by a sleep to say we end
+The heart-ache and the thousand natural shocks
+That flesh is heir to, 'tis a consummation
+Devoutly to be wish'd. To die, to sleep;
+To sleep: perchance to
 
+dream: ay, there's the rub;
+For in that sleep of death what dreams may come
+
+When we have shuffled off this mortal coil,
+Must give us pause: there's the respect
+That makes calamity of so long life;
+For who would bear the whips and scorns of time,
+The oppressor's wrong, the proud
+
+man's contumely,
+The pangs of despised love, the law's delay,
+The insolence of office and the spurns
+}
+}
+
+\folderCmd{}{
+\begin{center}
+    \begin{turn}{90}
+        {\fontsize{112}{92}\selectfont ARCHIVE}
+    \end{turn}
+\end{center}
 }
 
 
 \folderCmd{Taxes}{
 
-    2021
+    $\bullet$ 2021
 
-    2020
+    $\bullet$ 2020
 
-    2019
+    $\bullet$ 2019
 
-    2018
-
-}
-
-\folderCmd{School}{
+    $\bullet$ 2018
 
 }
 
-\folderCmd{Archive}{
-
+\folderCmd{{\fontfamily{pag} \fontsize{56}{48}\selectfont \bfseries School}}{
+\vspace{1cm}
+    {\fontfamily{pag} \fontsize{32}{28}\selectfont
+Chose your own fonts.
+    }
 }
+
 
 \end{folderbox}
 
