Renames \folderCmd to \folder

--- a/example/example.tex
+++ b/example/example.tex
@@ -42,7 +42,7 @@
 
 \begin{folderbox}{My Folder Box -- The Label}
 
-\folderCmd{\fontsize{32}{38}\selectfont Projects}{
+\folder{\fontsize{32}{38}\selectfont Projects}{
 \vspace{1cm}
 \begin{center}
 
@@ -89,7 +89,7 @@ tW
 \end{center}
 }
 
-\folderCmd{}{
+\folder{}{
 {\fontsize{12}{10}\selectfont
 %\lipsum[66]
 To be, or not to be: that is the question:
@@ -118,7 +118,7 @@ The insolence of office and the spurns
 }
 }
 
-\folderCmd{}{
+\folder{}{
 \begin{center}
     \begin{turn}{90}
         {\fontsize{112}{92}\selectfont ARCHIVE}
@@ -127,7 +127,7 @@ The insolence of office and the spurns
 }
 
 
-\folderCmd{Taxes}{
+\folder{Taxes}{
 
     $\bullet$ 2021
 
@@ -139,7 +139,7 @@ The insolence of office and the spurns
 
 }
 
-\folderCmd{{\fontfamily{pag} \fontsize{56}{48}\selectfont \bfseries School}}{
+\folder{{\fontfamily{pag} \fontsize{56}{48}\selectfont \bfseries School}}{
 \vspace{1cm}
     {\fontfamily{pag} \fontsize{32}{28}\selectfont
 Chose your own fonts.
