--- a/folderbox.sty
+++ b/folderbox.sty
@@ -167,7 +167,7 @@
     %
     % define command to fill current column / label (one parameter for header, everything between begin and end in )
     %
-    \newcommand{\folderCmd}[2]{
+    \newcommand{\folder}[2]{
         \stepcounter{currentFolder}
 
         % concatenate header and value of 'currentFolder' counter as name of folder var
