--- a/example/example.tex
+++ b/example/example.tex
@@ -4,6 +4,10 @@
 %\usepackage{folderbox}
 \usepackage[cropmarks]{folderbox}
 
+% adjust margins before header and content
+\renewcommand{\folderboxHeaderTopMargin}{0.2cm}
+\renewcommand{\folderboxBodyTopMargin}{0cm}
+
 
 \usepackage{lipsum}
 \usepackage{rotating}
@@ -27,8 +31,8 @@
 \renewcommand{\folderboxHeaderFont}{\fontspec{Futura Bold} \LARGE \bfseries}
 \renewcommand{\folderboxHeaderFont}{\fontspec{Futura Medium} \huge \bfseries}
 \renewcommand{\folderboxHeaderFont}{\fontspec{Futura Bold} \Huge \bfseries}
-\renewcommand{\folderboxHeaderFont}{\fontspec{Futura Bold} \fontsize{36}{38}\selectfont \bfseries}
-\renewcommand{\folderboxBodyFont}{\fontspec{Futura Medium} \LARGE}
+\renewcommand{\folderboxHeaderFont}{\fontspec{Futura Bold} \fontsize{36}{30} \renewcommand{\baselinestretch}{1.5} \selectfont \bfseries}
+\renewcommand{\folderboxBodyFont}{\fontspec{Futura Medium} \renewcommand{\baselinestretch}{1.5} \LARGE}
 
 % Helvetica Neue
 % \renewcommand{\folderboxHeaderFont}{\fontspec{Helvetica Neue Bold} \LARGE \bfseries}
@@ -39,9 +43,7 @@
 %
 
 \begin{document}
-
 \begin{folderbox}{My Folder Box -- The Label}
-
 \folder{\fontsize{32}{38}\selectfont Projects}{
 \vspace{1cm}
 \begin{center}
@@ -92,8 +94,8 @@ tW
 
 \folder{}{
 {\fontsize{12}{10}\selectfont
-%\lipsum[66]
 To be, or not to be: that is the question:
+
 Whether 'tis nobler in the mind to suffer
 The slings and arrows of outrageous fortune,
 Or to take arms against a sea of troubles,
@@ -102,18 +104,15 @@ No more; and by a sleep to say we end
 The heart-ache and the thousand natural shocks
 That flesh is heir to, 'tis a consummation
 Devoutly to be wish'd. To die, to sleep;
-To sleep: perchance to
-
-dream: ay, there's the rub;
+To sleep: perchance to dream: ay, there's the rub;
 For in that sleep of death what dreams may come
-
 When we have shuffled off this mortal coil,
 Must give us pause: there's the respect
 That makes calamity of so long life;
 For who would bear the whips and scorns of time,
-The oppressor's wrong, the proud
+The oppressor's
 
-man's contumely,
+wrong, the proud man's contumely,
 The pangs of despised love, the law's delay,
 The insolence of office and the spurns
 }
@@ -129,7 +128,6 @@ The insolence of office and the spurns
 
 
 \folder{Taxes}{
-
     $\bullet$ 2021
 
     $\bullet$ 2020
@@ -141,11 +139,52 @@ The insolence of office and the spurns
 }
 
 \folder{{\fontfamily{pag} \fontsize{56}{48}\selectfont \bfseries School}}{
-\vspace{1cm}
+\vspace{0.7cm}
     {\fontfamily{pag} \fontsize{32}{28}\selectfont
 Chose your own fonts.
     }
 }
 \end{folderbox}
+
+
+% ------------- Second page ---------------------------------------------------
+
+
+\begin{folderbox}{Folder Box 1}
+
+\folder{Bank}{
+
+
+}
+
+\folder{Invoice}{
+
+}
+
+
+\folder{Taxes}{
+
+    2021
+
+    2020
+
+    2019
+
+    2018
+
+}
+
+\folder{Archive}{
+
+}
+
+% leave last folder empty
+% \folder{School}{
+
+% }
+
+
+\end{folderbox}
+
 
 \end{document}
